--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "alembic>=1.16.5",
     "fastapi>=0.118.0",
     "fastmcp>=2.12.4",
+    "psycopg2>=2.9.10",
     "pydantic>=2.11.9",
     "python-dotenv>=1.1.1",
     "sqlalchemy>=2.0.43",
