--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,11 @@ dependencies = [
     "alembic>=1.16.5",
     "fastapi>=0.118.0",
     "fastmcp>=2.12.4",
+    "passlib[bcrypt]>=1.7.4",
     "psycopg2>=2.9.10",
     "pydantic>=2.11.9",
     "python-dotenv>=1.1.1",
+    "python-jose[cryptography]>=3.5.0",
     "sqlalchemy>=2.0.43",
     "uvicorn>=0.37.0",
 ]
