--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "alembic>=1.16.5",
+    "argon2-cffi>=25.1.0",
     "fastapi>=0.118.0",
     "fastmcp>=2.12.4",
     "passlib[bcrypt]>=1.7.4",
